--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@types/undertaker": "^1.2.8",
     "rimraf": "^5.0.0",
     "unbuild": "^1.2.1"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.14.194"
   }
 }
